Create new icons, update index.html

--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1051,6 +1051,12 @@ const BookTagIcons = {
   'BullionVendor': '/assets/BullionIcon.png',
   'StampsVendor': '/assets/StampIcon.png',
   'DailyOps': '/assets/DOpsIcon.png',
+  'CommonWorkshop': '/assets/WorkshopIcon.png',
+  'RaidsReward': '/assets/RaidIcon.svg',
+  'TreasureHunters': '/assets/TreasureHuntersIcon.png',
+  'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
+  'FasnachtRewards': '/assets/FasnachtIcon.svg',
+  'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
 };
 
 // --- Manual icon overrides ---
@@ -1460,9 +1466,16 @@ function renderResults(query) {
 
 if (hasBook) {
   const BookTagIcons = {
-    'dailyops': '/assets/DOpsIcon.png',
-    'stampsvendor': '/assets/StampIcon.png',
-    'bullionvendor': '/assets/BullionIcon.png',
+  'BullionVendor': '/assets/BullionIcon.png',
+  'StampsVendor': '/assets/StampIcon.png',
+  'DailyOps': '/assets/DOpsIcon.png',
+  'CommonWorkshop': '/assets/WorkshopIcon.png',
+  'RaidsReward': '/assets/RaidIcon.svg',
+  'TreasureHunters': '/assets/TreasureHuntersIcon.png',
+  'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
+  'FasnachtRewards': '/assets/FasnachtIcon.svg',
+  'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
+};
   };
 
   const bookFulls = String(r.BOOK_FULL || '')
