Create new icons, update index.html

--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1057,6 +1057,8 @@ const BookTagIcons = {
   'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
   'FasnachtRewards': '/assets/FasnachtIcon.svg',
   'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
+  'SpookyScorched': '/assets/SpookyScorchedIcon.svg/,
+  'PublicEventRewards'; '/assets/PublicEventIcon.svg',
 };
 
 // --- Manual icon overrides ---
@@ -1475,6 +1477,8 @@ if (hasBook) {
   'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
   'FasnachtRewards': '/assets/FasnachtIcon.svg',
   'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
+  'SpookyScorched': '/assets/SpookyScorchedIcon.svg/,
+  'PublicEventRewards'; '/assets/PublicEventIcon.svg',
 };
 
   const bookFulls = String(r.BOOK_FULL || '')
