--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1058,7 +1058,7 @@ const BookTagIcons = {
   'FasnachtRewards': '/assets/FasnachtIcon.svg',
   'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
   'SpookyScorched': '/assets/SpookyScorchedIcon.svg/,
-  'PublicEventRewards'; '/assets/PublicEventIcon.svg',
+  'PublicEventRewards': '/assets/PublicEventIcon.svg',
 };
 
 // --- Manual icon overrides ---
@@ -1478,7 +1478,7 @@ if (hasBook) {
   'FasnachtRewards': '/assets/FasnachtIcon.svg',
   'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
   'SpookyScorched': '/assets/SpookyScorchedIcon.svg/,
-  'PublicEventRewards'; '/assets/PublicEventIcon.svg',
+  'PublicEventRewards': '/assets/PublicEventIcon.svg',
 };
 
   const bookFulls = String(r.BOOK_FULL || '')
