--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1057,7 +1057,7 @@ const BookTagIcons = {
   'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
   'FasnachtRewards': '/assets/FasnachtIcon.svg',
   'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
-  'SpookyScorched': '/assets/SpookyScorchedIcon.svg/,
+  'SpookyScorched': '/assets/SpookyScorchedIcon.svg/',
   'PublicEventRewards': '/assets/PublicEventIcon.svg',
 };
 
@@ -1477,7 +1477,7 @@ if (hasBook) {
   'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
   'FasnachtRewards': '/assets/FasnachtIcon.svg',
   'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
-  'SpookyScorched': '/assets/SpookyScorchedIcon.svg/,
+  'SpookyScorched': '/assets/SpookyScorchedIcon.svg/',
   'PublicEventRewards': '/assets/PublicEventIcon.svg',
 };
 
