Create new icons, update index.html

--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1051,7 +1051,7 @@ const BookTagIcons = {
   'BullionVendor': '/assets/BullionIcon.png',
   'StampsVendor': '/assets/StampIcon.png',
   'DailyOps': '/assets/DOpsIcon.png',
-  'CommonWorkshop': '/assets/WorkshopIcon.png',
+  'CommonWorkshop': '/assets/WorkshopIcon.svg',
   'RaidsReward': '/assets/RaidIcon.svg',
   'TreasureHunters': '/assets/TreasureHuntersIcon.png',
   'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
@@ -1471,7 +1471,7 @@ if (hasBook) {
     'BullionVendor': '/assets/BullionIcon.png',
     'StampsVendor': '/assets/StampIcon.png',
     'DailyOps': '/assets/DOpsIcon.png',
-    'CommonWorkshop': '/assets/WorkshopIcon.png',
+    'CommonWorkshop': '/assets/WorkshopIcon.svg',
     'RaidsReward': '/assets/RaidIcon.svg',
     'TreasureHunters': '/assets/TreasureHuntersIcon.png',
     'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
