--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1514,7 +1514,7 @@ if (hasBook) {
       if (iconSrc) {
         const icon = document.createElement('img');
         icon.src = iconSrc;
-        icon.style.width = '30px';
+        icon.style.width = 'auto';
         icon.style.height = '30px';
         icon.style.verticalAlign = 'middle';
         icon.style.marginRight = '6px';
