Add Equinox icon

--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1060,6 +1060,7 @@ const BookTagIcons = {
   'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
   'SpookyScorched': '/assets/SpookyScorchedIcon.svg',
   'PublicEventRewards': '/assets/PublicEventIcon.svg',
+  'EquinoxRewards': '/assets/EquinoxIcon.svg',
 };
 
 // --- Manual icon overrides ---
