--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1401,6 +1401,7 @@ function renderResults(query) {
       const img = document.createElement('img');
       img.src = `Images/${r.CNAM_FormID.toLowerCase()}.png`;
       img.alt = r.Name;
+      img.loading = "eager";
       left.appendChild(img);
     }
 
