--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -341,7 +341,7 @@
     font-weight: bold;
     color: var(--accent);
     text-align: center;
-    max-width: 125%;
+    max-width: 250px;
     margin: 0 auto;           
     padding: 2px 6px;
   }
