--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -256,7 +256,8 @@
     align-items: center;
     gap: 8px;
     text-align: center;
-    width: 100%;
+    width: auto;
+    max-width: 360px;
     justify-content: center;
   }
 
