--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -257,7 +257,7 @@
     gap: 8px;
     text-align: center;
     width: auto;
-    max-width: 360px;
+    max-width: 330px;
     justify-content: center;
   }
 
@@ -1482,6 +1482,7 @@ if (hasBook) {
     'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
     'SpookyScorched': '/assets/SpookyScorchedIcon.svg',
     'PublicEventRewards': '/assets/PublicEventIcon.svg',
+    'EquinoxRewards': '/assets/EquinoxIcon.svg',
   };
 
   const bookFulls = String(r.BOOK_FULL || '')
