--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -256,7 +256,7 @@
     align-items: center;
     gap: 8px;
     text-align: center;
-    width: auto;
+    flex: 1 1 auto;
     max-width: 330px;
     justify-content: center;
   }
