--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -256,8 +256,8 @@
     align-items: center;
     gap: 8px;
     text-align: center;
-    flex: 1 1 auto;
-    max-width: 330px;
+    width: auto;
+    max-width: calc(100% - 220px - 16px);;
     justify-content: center;
   }
 
