--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -214,8 +214,9 @@
   }
 
   li {
-    display: flex;
+    display: grid;
     align-items: center;
+    grid-template-columns: 220px auto;
     gap: 16px;
     padding: 12px;
     background-color: var(--card-bg);
