--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -224,8 +224,7 @@
     border-radius: 6px;
     border: 2px solid var(--accent);
     box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-    width: auto;
-    justify-content: center;
+    width: 100%;
   }
 
 ul.results-list {
