--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -336,7 +336,7 @@ ul.results-list {
     justify-content: center;
     text-align: center;
     line-height: 1.2;
-    width: 240px;
+    max-width: 240px;
     min-height: 30px;
     word-break: break-word;
   }
