--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -352,7 +352,7 @@ ul.results-list {
     font-weight: bold;
     color: var(--accent);
     text-align: center;
-    max-width: 250px;
+    max-width: 100%;
     margin: 0 auto;           
     padding: 2px 6px;
   }
