--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -755,14 +755,18 @@ ul.results-list {
       flex-direction: column;
       align-items: center;
       text-align: center;
-      width: 350px;
+      width: 100%;
+      max-width: 350px;
+    }
+    .result-left, .result-right {
+      width: 100%;
     }
     .result-left {
       max-width: none;
     }
     .result-right {
       justify-content: center;
-      margin-top: 10px;
+      margin-top: 0;
     }
     .result-right span.pill {
       font-size: 12px;
