--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -751,15 +751,17 @@ ul.results-list {
 
 
   @media (max-width: 600px) {
-    li {
-      flex-direction: column;
-      align-items: center;
-      text-align: center;
-      width: 100%;
-      max-width: 350px;
-    }
+  li {
+    display: flex;              
+    flex-direction: column;     
+    align-items: center;       
+    width: 100%;
+    max-width: 100%;
+    gap: 10px;                   
+  }
     .result-left, .result-right {
       width: 100%;
+      text-align: center;
     }
     .result-left {
       max-width: none;
