--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -233,7 +233,8 @@ ul.results-list {
   align-items: center; 
   gap: 14px;
   padding: 0;
-  margin: 0 auto;      
+  margin: 0 auto;   
+  width: 100%;   
   max-width: 600px;    
 }
 
@@ -756,7 +757,7 @@ ul.results-list {
     flex-direction: column;     
     align-items: center;       
     width: 100%;
-    max-width: 100%;
+    max-width: 350px;
     gap: 10px;                   
   }
     .result-left, .result-right {
