--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -353,7 +353,7 @@ ul.results-list {
     font-weight: bold;
     color: var(--accent);
     text-align: center;
-    max-width: 100%;
+    max-width: 200px;
     margin: 0 auto;           
     padding: 2px 6px;
   }
