--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -225,6 +225,7 @@
     border: 2px solid var(--accent);
     box-shadow: 0 2px 6px rgba(0,0,0,0.4);
     width: 100%;
+    justify-content: center;
   }
 
 ul.results-list {
@@ -805,7 +806,7 @@ ul.results-list {
 <div class="container">
     <details>
       <summary>Version History</summary>
-           <div class="changelog-entry">
+      <div class="changelog-entry">
         <h4>v3.0 Beta</h4>
         <ul><li>Expansion towards a more generalized database tool:<br>
 - Added category icons<br>
