--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1669,7 +1669,7 @@ if (hasBook) {
       } else {
         // If the exact pair expected EDID is not matched, still prefer AdditionalStorage only
         // if an F1_ EDID was matched; otherwise fall through to EDID logic.
-        if (edidUpper.startsWith('F1_')) iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
+        if (edidUpper.startsWith('F1_ENTM')) iconSrc = '/assets/SubCategory-AdditionalStorageIcon.svg';
       }
     }
 
