--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -244,6 +244,7 @@ ul.results-list {
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
+    justify-content: center;
     width: 220px;
   }
 
