--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -215,7 +215,7 @@
 
   li {
     display: grid;
-    align-items: center;
+    align-items: start;
     grid-template-columns: 220px auto;
     gap: 16px;
     padding: 12px;
