--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -92,16 +92,6 @@
     cursor: default;
   }
 
-.no-results {
-  display: inline-block;  
-  text-align: center;      
-  padding: 10px 10px;      
-  color: #ccc;
-  font-size: 1em;        
-  list-style: none;
-}
-
-
 .controls {
   position: sticky;
   top: 0;
@@ -161,7 +151,7 @@
   .controls .inline-group {
     display: flex;
     align-items: center;
-    gap: -20px;
+    gap: 8px;
     justify-content: center;
     margin-top: 8px;
   }
@@ -213,10 +203,9 @@
     max-width: 600px;
   }
 
-  li {
-    display: grid;
-    align-items: start;
-    grid-template-columns: 220px auto;
+ li {
+    display: flex;
+    align-items: center;
     gap: 16px;
     padding: 12px;
     background-color: var(--card-bg);
@@ -225,26 +214,13 @@
     border: 2px solid var(--accent);
     box-shadow: 0 2px 6px rgba(0,0,0,0.4);
     width: 100%;
-    justify-content: center;
   }
-
-ul.results-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center; 
-  gap: 14px;
-  padding: 0;
-  margin: 0 auto;   
-  width: 100%;   
-  max-width: 600px;    
-}
 
   .result-left {
     display: flex;
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
-    justify-content: center;
     width: 220px;
   }
 
@@ -270,7 +246,7 @@ ul.results-list {
     align-items: center;
     gap: 8px;
     text-align: center;
-    width: auto;
+    width: 100%;
     justify-content: center;
   }
 
@@ -355,7 +331,7 @@ ul.results-list {
     font-weight: bold;
     color: var(--accent);
     text-align: center;
-    max-width: 200px;
+    max-width: 250px;
     margin: 0 auto;           
     padding: 2px 6px;
   }
@@ -754,16 +730,9 @@ ul.results-list {
 
 
   @media (max-width: 600px) {
-  li {
-    display: flex;              
-    flex-direction: column;     
-    align-items: center;       
-    width: 100%;
-    max-width: 350px;
-    gap: 10px;                   
-  }
-    .result-left, .result-right {
-      width: 100%;
+    li {
+      flex-direction: column;
+      align-items: center;
       text-align: center;
     }
     .result-left {
@@ -771,7 +740,7 @@ ul.results-list {
     }
     .result-right {
       justify-content: center;
-      margin-top: 0;
+      margin-top: 10px;
     }
     .result-right span.pill {
       font-size: 12px;
@@ -1067,23 +1036,11 @@ window.addEventListener('DOMContentLoaded', () => {
   renderResults('');
 });
 
-// Icons driven by BOOK_SOURCE_TAG values
-const BookTagIcons = {
-  'BullionVendor': '/assets/BullionIcon.png',
-  'StampsVendor': '/assets/StampIcon.png',
-  'DailyOps': '/assets/DOpsIcon.png',
-  'CommonWorkshop': '/assets/WorkshopIcon.svg',
-  'RaidsReward': '/assets/RaidIcon.svg',
-  'TreasureHunters': '/assets/TreasureHuntersIcon.png',
-  'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
-  'FasnachtRewards': '/assets/FasnachtIcon.svg',
-  'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
-  'SpookyScorched': '/assets/SpookyScorchedIcon.svg',
-  'PublicEventRewards': '/assets/PublicEventIcon.svg',
-  'EquinoxRewards': '/assets/EquinoxIcon.svg',
-};
-
 // --- Manual icon overrides ---
+const ManualIcons = {
+  'XPD_': '/assets/StampIcon.png',
+  '_GOLDVENDOR': '/assets/BullionIcon.png',
+};
 const ManualEntmIcons = {
   'Babylon_': '/assets/V51Icon.png',
   'Shelters_': '/assets/AtomIcon.png',
@@ -1399,7 +1356,7 @@ function renderResults(query) {
   results.innerHTML = '';
 
   if (!paged.length) {
-    results.innerHTML = '<li class="no-results">No matches found</li>';
+    results.innerHTML = '<li>No matches found</li>';
     pagination.innerHTML = '';
     return;
   }
@@ -1421,7 +1378,7 @@ function renderResults(query) {
       const img = document.createElement('img');
       img.src = `Images/${r.CNAM_FormID.toLowerCase()}.png`;
       img.alt = r.Name;
-      img.loading = "eager";
+      img.loading = "lazy";
       left.appendChild(img);
     }
 
@@ -1488,67 +1445,59 @@ function renderResults(query) {
       const isDirect = (String(r.BOOK_SOURCE || '').toLowerCase() === 'direct');
       const connectorWord = isDirect ? 'and' : 'or';
 
+      // --- BOOK pills ---
 if (hasBook) {
-  const BookTagIcons = {
-    'BullionVendor': '/assets/BullionIcon.png',
-    'StampsVendor': '/assets/StampIcon.png',
-    'DailyOps': '/assets/DOpsIcon.png',
-    'CommonWorkshop': '/assets/WorkshopIcon.svg',
-    'RaidsReward': '/assets/RaidIcon.svg',
-    'TreasureHunters': '/assets/TreasureHuntersIcon.png',
-    'MeatWeekRewards': '/assets/MeatWeekIcon.svg',
-    'FasnachtRewards': '/assets/FasnachtIcon.svg',
-    'MischiefNightRewards': '/assets/MischiefNightIcon.svg',
-    'SpookyScorched': '/assets/SpookyScorchedIcon.svg',
-    'PublicEventRewards': '/assets/PublicEventIcon.svg',
-    'EquinoxRewards': '/assets/EquinoxIcon.svg',
+  const ManualIcons = {
+    'XPD_': '/assets/StampIcon.png',
+    '_GOLDVENDOR': '/assets/BullionIcon.png',
   };
 
+  // Split BOOK_FULLs and EDIDs by semicolon
   const bookFulls = String(r.BOOK_FULL || '')
     .split(';')
     .map(s => s.trim())
     .filter(Boolean);
-
-  const rawTags = String(r.BOOK_SOURCE_TAG || '').trim();
-
-  const tagEntries = rawTags
+  const bookEdids = String(r.BOOK_EditorID || '')
     .split(';')
     .map(s => s.trim())
     .filter(Boolean);
 
-  const getTagsForBook = (index) => {
-    if (bookFulls.length === 1) {
-      return rawTags.split(/[;|]/).map(t => t.trim()).filter(Boolean);
-    }
-    if (tagEntries.length === bookFulls.length) {
-      return tagEntries[index].split(/[;|]/).map(t => t.trim()).filter(Boolean);
-    }
-    return rawTags.split(/[;|]/).map(t => t.trim()).filter(Boolean);
-  };
+  const bookPills = [];
 
   bookFulls.forEach((fullName, i) => {
-    const pill = document.createElement('span');
-    pill.className = 'pill';
+    const bookPill = document.createElement('span');
+    bookPill.className = 'pill';
 
-    const tags = getTagsForBook(i);
+    const matchedEdid = bookEdids[i] || '';
+    const bookEdidUpper = matchedEdid.toUpperCase();
 
-    tags.forEach(tag => {
-      const iconSrc = BookTagIcons[tag]; // ← fix
-      if (iconSrc) {
-        const icon = document.createElement('img');
-        icon.src = iconSrc;
-        icon.style.width = 'auto';
-        icon.style.height = '30px';
-        icon.style.verticalAlign = 'middle';
-        icon.style.marginRight = '6px';
-        pill.appendChild(icon);
+    // Decide icon
+    let iconSrc = '';
+    for (const key in ManualIcons) {
+      if (bookEdidUpper.includes(key.toUpperCase())) {
+        iconSrc = ManualIcons[key];
+        break;
       }
-    });
+    }
 
-    pill.appendChild(document.createTextNode(fullName));
+    if (iconSrc) {
+      const icon = document.createElement('img');
+      icon.src = iconSrc;
+      icon.style.width = '30px';
+      icon.style.height = '30px';
+      icon.style.verticalAlign = 'middle';
+      icon.style.marginRight = '6px';
+      bookPill.appendChild(icon);
+    }
+
+    bookPill.appendChild(document.createTextNode(fullName));
+    bookPills.push(bookPill);
+  });
+
+  // append multiple BOOK pills with "and" connectors
+  bookPills.forEach((pill, i) => {
     condWrap.appendChild(pill);
-
-    if (i < bookFulls.length - 1) {
+    if (i < bookPills.length - 1) {
       const conn = document.createElement('span');
       conn.className = 'connector';
       conn.textContent = 'and';
@@ -1556,7 +1505,6 @@ if (hasBook) {
     }
   });
 }
-
 
 
       // --- connector ---
