--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -214,6 +214,7 @@
     border: 2px solid var(--accent);
     box-shadow: 0 2px 6px rgba(0,0,0,0.4);
     width: 100%;
+    max-width: 600px;
   }
 
   .result-left {
@@ -249,6 +250,18 @@
     width: 100%;
     justify-content: center;
   }
+
+ul.results-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  gap: 14px;
+  padding: 0;
+  margin: 0 auto;   
+  width: 100%;   
+  max-width: 600px; /* same as search bar */
+  box-sizing: border-box;
+}
 
   .result-right .section-header {
     font-weight: 700;
