--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -251,6 +251,15 @@
     justify-content: center;
   }
 
+.results-container {    
+  width: 100%;
+  max-width: 600px;   
+  margin: 0 auto;     
+  padding: 0;         
+  box-sizing: border-box;
+}
+
+
 ul.results-list {
   display: flex;
   flex-direction: column;
