--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -203,6 +203,7 @@
     max-width: 600px;
   }
 
+ I think the result stuff is in here somewhere:
  li {
     display: flex;
     align-items: center;
@@ -214,7 +215,6 @@
     border: 2px solid var(--accent);
     box-shadow: 0 2px 6px rgba(0,0,0,0.4);
     width: 100%;
-    max-width: 600px;
   }
 
   .result-left {
@@ -247,30 +247,9 @@
     align-items: center;
     gap: 8px;
     text-align: center;
-    width: 100%;
+    width: 380px;
     justify-content: center;
   }
-
-.results-container {    
-  width: 100%;
-  max-width: 600px;   
-  margin: 0 auto;     
-  padding: 0;         
-  box-sizing: border-box;
-}
-
-
-ul.results-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center; 
-  gap: 14px;
-  padding: 0;
-  margin: 0 auto;   
-  width: 100%;   
-  max-width: 600px; /* same as search bar */
-  box-sizing: border-box;
-}
 
   .result-right .section-header {
     font-weight: 700;
