--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -247,7 +247,7 @@
     align-items: center;
     gap: 8px;
     text-align: center;
-    width: 380px;
+    width: 100%;
     justify-content: center;
   }
 
