--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -246,7 +246,7 @@
     align-items: center;
     gap: 8px;
     text-align: center;
-    width: 100%;
+    width: 380px;
     justify-content: center;
   }
 
