--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -742,6 +742,10 @@
       justify-content: center;
       margin-top: 10px;
     }
+    .result-left, .result-right {
+      max-width: none;
+      width: 100%;
+    }
     .result-right span.pill {
       font-size: 12px;
       padding: 2px 6px;
