--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -272,42 +272,6 @@
     text-align: center;
   }
 
-.results-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 14px;
-  padding: 0;
-  margin: 0 auto;
-  max-width: 600px;
-  width: 100%;
-  box-sizing: border-box;
-}
-
-.results-list li {
-  display: flex;
-  align-items: center;
-  gap: 16px;
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 12px;
-  background-color: var(--card-bg);
-  border-radius: 6px;
-  border: 2px solid var(--accent);
-  box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-  box-sizing: border-box;
-}
-
-.results-list .result-left {
-  flex: 0 0 220px;
-}
-
-.results-list .result-right {
-  flex: 1 1 auto;
-  min-width: 0;
-}
-
   .inline-wrap {
     display: inline-flex;
     align-items: center;
@@ -778,16 +742,10 @@
       justify-content: center;
       margin-top: 10px;
     }
-  .results-list li {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-  .results-list .result-left,
-  .results-list .result-right {
-    width: 100%;
-    max-width: none;
-  }
+    .result-left, .result-right {
+      max-width: none;
+      width: 100%;
+    }
     .result-right span.pill {
       font-size: 12px;
       padding: 2px 6px;
@@ -895,13 +853,6 @@
       </div>
     </div>
   </div>
-
-<ul class="results-list">
-  <li>
-    <div class="result-left">Left</div>
-    <div class="result-right">Right</div>
-  </li>
-</ul>
 
 <div class="inline-group">
   <!-- Filters group -->
