--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -221,7 +221,7 @@
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
-    width: 220px;
+    width: auto;
   }
 
   .result-name {
