--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -209,6 +209,7 @@
     gap: 0px;
     padding: 12px;
     background-color: var(--card-bg);
+    box-sizing: border-box;
     margin-bottom: 14px;
     border-radius: 6px;
     border: 2px solid var(--accent);
