--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -222,7 +222,7 @@
     flex-direction: column;
     align-items: center;
     flex-shrink: 0;
-    width: auto;
+    width: 100%;
   }
 
   .result-name {
