--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -730,6 +730,24 @@
   color: black;
 }
 
+.tooltip {
+  position: absolute;
+  background: var(--bg);
+  color: var(--accent);
+  padding: 4px 8px;
+  font-size: 12px;
+  border-radius: 4px;
+  border: 1px solid var(--accent);
+  white-space: nowrap;
+  pointer-events: none; 
+  opacity: 0;
+  transition: opacity 0.2s;
+  z-index: 1000;
+}
+
+.tooltip.show {
+  opacity: 1;
+}
 
   @media (max-width: 600px) {
     li {
@@ -1057,6 +1075,16 @@ const BookTagIcons = {
   'PublicEventRewards': '/assets/PublicEventIcon.svg',
   'EquinoxRewards': '/assets/EquinoxIcon.svg',
 };
+
+const IconAltText = {
+  'BullionVendor': 'Sold by a Gold Bullion vendor',
+  'StampsVendor': 'Sold by Giuseppe Della Ripa in the Whitespring',
+  'DailyOps': 'Daily Ops reward',
+  // ...
+};
+
+tooltip.textContent = IconAltText[tag] || tag;
+
 
 // --- Manual icon overrides ---
 const ManualEntmIcons = {
@@ -1508,17 +1536,51 @@ if (hasBook) {
     const tags = getTagsForBook(i);
 
     tags.forEach(tag => {
-      const iconSrc = BookTagIcons[tag]; // ← fix
-      if (iconSrc) {
-        const icon = document.createElement('img');
-        icon.src = iconSrc;
-        icon.style.width = 'auto';
-        icon.style.height = '30px';
-        icon.style.verticalAlign = 'middle';
-        icon.style.marginRight = '6px';
-        pill.appendChild(icon);
-      }
-    });
+      const iconSrc = BookTagIcons[tag]; 
+if (iconSrc) {
+  const icon = document.createElement('img');
+  icon.src = iconSrc;
+  icon.style.width = 'auto';
+  icon.style.height = '30px';
+  icon.style.verticalAlign = 'middle';
+  icon.style.marginRight = '6px';
+  pill.appendChild(icon);
+
+  // --- TOOLTIP ---
+  const tooltip = document.createElement('div');
+  tooltip.className = 'tooltip';
+  tooltip.textContent = IconAltText[tag] || tag; // replace IconAltText with your mapping object
+  document.body.appendChild(tooltip);
+
+  const showTooltip = () => {
+    const rect = icon.getBoundingClientRect();
+    tooltip.style.left = `${rect.left + rect.width / 2 - tooltip.offsetWidth / 2}px`;
+    tooltip.style.top = `${rect.top - tooltip.offsetHeight - 6}px`;
+    tooltip.classList.add('show');
+  };
+
+  const hideTooltip = () => {
+    tooltip.classList.remove('show');
+  };
+
+  // Desktop hover
+  icon.addEventListener('mouseenter', showTooltip);
+  icon.addEventListener('mouseleave', hideTooltip);
+
+  // Mobile tap
+  icon.addEventListener('click', (e) => {
+    e.stopPropagation();
+    if (tooltip.classList.contains('show')) {
+      hideTooltip();
+    } else {
+      showTooltip();
+    }
+  });
+
+  // Hide tooltip if clicking anywhere else (for mobile)
+  document.addEventListener('click', hideTooltip);
+}
+
 
     pill.appendChild(document.createTextNode(fullName));
     condWrap.appendChild(pill);
