--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1080,6 +1080,7 @@ const IconAltText = {
   'BullionVendor': 'Sold by a Gold Bullion vendor',
   'StampsVendor': 'Sold by Giuseppe Della Ripa in the Whitespring',
   'DailyOps': 'Daily Ops reward',
+  'BABYLON_': 'Nuclear Winter gamemode reward',
   // ...
 };
 
