--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -730,24 +730,6 @@
   color: black;
 }
 
-.tooltip {
-  position: absolute;
-  background: var(--bg);
-  color: var(--accent);
-  padding: 4px 8px;
-  font-size: 12px;
-  border-radius: 4px;
-  border: 1px solid var(--accent);
-  white-space: nowrap;
-  pointer-events: none; 
-  opacity: 0;
-  transition: opacity 0.2s;
-  z-index: 1000;
-}
-
-.tooltip.show {
-  opacity: 1;
-}
 
   @media (max-width: 600px) {
     li {
@@ -1075,17 +1057,6 @@ const BookTagIcons = {
   'PublicEventRewards': '/assets/PublicEventIcon.svg',
   'EquinoxRewards': '/assets/EquinoxIcon.svg',
 };
-
-const IconAltText = {
-  'BullionVendor': 'Sold by a Gold Bullion vendor',
-  'StampsVendor': 'Sold by Giuseppe Della Ripa in the Whitespring',
-  'DailyOps': 'Daily Ops reward',
-  'BABYLON_': 'Nuclear Winter gamemode reward',
-  // ...
-};
-
-tooltip.textContent = IconAltText[tag] || tag;
-
 
 // --- Manual icon overrides ---
 const ManualEntmIcons = {
@@ -1477,45 +1448,6 @@ function renderResults(query) {
     }
 
     // --- Placement Conditions header + pills ---
-// --- Helper to create icon + tooltip ---
-function createIconWithTooltip(iconSrc, altText) {
-  const icon = document.createElement('img');
-  icon.src = iconSrc;
-  icon.style.width = '30px';
-  icon.style.height = '30px';
-  icon.style.verticalAlign = 'middle';
-  icon.style.marginRight = '6px';
-
-  // Tooltip
-  const tooltip = document.createElement('div');
-  tooltip.className = 'tooltip';
-  tooltip.textContent = altText;
-  document.body.appendChild(tooltip);
-
-  const showTooltip = () => {
-    const rect = icon.getBoundingClientRect();
-    tooltip.style.left = `${rect.left + rect.width / 2 - tooltip.offsetWidth / 2}px`;
-    tooltip.style.top = `${rect.top - tooltip.offsetHeight - 6}px`;
-    tooltip.classList.add('show');
-  };
-
-  const hideTooltip = () => {
-    tooltip.classList.remove('show');
-  };
-
-  // Desktop hover
-  icon.addEventListener('mouseenter', showTooltip);
-  icon.addEventListener('mouseleave', hideTooltip);
-
-  // Mobile tap
-  icon.addEventListener('click', e => {
-    e.stopPropagation();
-    tooltip.classList.toggle('show');
-  });
-
-  return icon;
-}
-
     const hasBook = !!(r.BOOK_FULL && String(r.BOOK_FULL).trim());
     const hasEntm = !!(r.ENTM_FULL && String(r.ENTM_FULL).trim());
     if (hasBook || hasEntm) {
@@ -1576,41 +1508,17 @@ if (hasBook) {
     const tags = getTagsForBook(i);
 
     tags.forEach(tag => {
-      const iconSrc = BookTagIcons[tag]; 
-if (iconSrc) {
-  const icon = createIconWithTooltip(iconSrc, IconAltText[tag] || tag);
-  pill.appendChild(icon);
-}
-
-  const showTooltip = () => {
-    const rect = icon.getBoundingClientRect();
-    tooltip.style.left = `${rect.left + rect.width / 2 - tooltip.offsetWidth / 2}px`;
-    tooltip.style.top = `${rect.top - tooltip.offsetHeight - 6}px`;
-    tooltip.classList.add('show');
-  };
-
-  const hideTooltip = () => {
-    tooltip.classList.remove('show');
-  };
-
-  // Desktop hover
-  icon.addEventListener('mouseenter', showTooltip);
-  icon.addEventListener('mouseleave', hideTooltip);
-
-  // Mobile tap
-  icon.addEventListener('click', (e) => {
-    e.stopPropagation();
-    if (tooltip.classList.contains('show')) {
-      hideTooltip();
-    } else {
-      showTooltip();
-    }
-  });
-
-  // Hide tooltip if clicking anywhere else (for mobile)
-  document.addEventListener('click', hideTooltip);
-}
-
+      const iconSrc = BookTagIcons[tag]; // ← fix
+      if (iconSrc) {
+        const icon = document.createElement('img');
+        icon.src = iconSrc;
+        icon.style.width = 'auto';
+        icon.style.height = '30px';
+        icon.style.verticalAlign = 'middle';
+        icon.style.marginRight = '6px';
+        pill.appendChild(icon);
+      }
+    });
 
     pill.appendChild(document.createTextNode(fullName));
     condWrap.appendChild(pill);
@@ -1623,6 +1531,8 @@ if (iconSrc) {
     }
   });
 }
+
+
 
       // --- connector ---
       if (hasBook && hasEntm) {
@@ -1766,10 +1676,14 @@ if (iconSrc) {
     pill.className = 'pill';
 
     if (iconSrc) {
-  const altText = matchedEdid || fullName; // tooltip text
-  const icon = createIconWithTooltip(iconSrc, altText);
-  pill.appendChild(icon);
-}
+      const icon = document.createElement('img');
+      icon.src = iconSrc;
+      icon.style.width = '30px';
+      icon.style.height = '30px';
+      icon.style.verticalAlign = 'middle';
+      icon.style.marginRight = '6px';
+      pill.appendChild(icon);
+    }
 
 // optional season suffix
 let textSuffix = '';
