--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -151,7 +151,7 @@
   .controls .inline-group {
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: -10px;
     justify-content: center;
     margin-top: 8px;
   }
@@ -159,7 +159,7 @@
 .inline-group {
   display: flex;
   align-items: center;
-  gap: -30px;
+  gap: 0px;
   justify-content: center;
   margin-top: 8px;
   width: 100%;
@@ -758,7 +758,9 @@
       border-left: 8px solid var(--accent);
       margin: 0 4px;
     }
-
+    .controls {
+      flex-direction: column;
+    }
   }
 </style>
 </head>
